index.css
body
{
    background-color: #57B8FF;
    font-family: Calibri;
    font-size: 20px;
}
#wrapper
{
    border-radius: 10px;
    width: 75%;
    margin: auto;
    margin-top: 2%;
}
.container
{
    margin-bottom: 10px;
    padding: 10px;
}
#title
{
    text-align: center;
    margin-bottom: 5px;
}
.cumulativeGPA
{
    text-align: center;
    margin-bottom: 20px;
}
.course
{
    text-align: center;
}
input[type=text]
{
    width: 16%;
    padding: 12px 18px;
    margin: 6px 12px 6px 3px;
    border: 1px solid #FDFFFC;
    border-radius: 5px;
    box-sizing: border-box;
}
select
{
    width: 6%;
    padding: 12px;
    margin: 6px 12px 6px 3px;
    border: 1px solid #FDFFFC;
    border-radius: 5px;
    box-sizing: border-box;
}
.trashcan
{
    display: none;
}
#buttons
{
    text-align: center;
}
button
{
    border: none;
    color: white;
    text-align: center;
    text-decoration: none;
    cursor: pointer;
    padding: 18px;
    font-size: 20px;
    margin: 0px 30px;
}
#addCourse
{
    border-radius: 8px;
    background-color: #FBB13C;
}
#calculate
{
    border-radius: 8px;
    background-color: #2176AE;
}

